# MyBeamProfilerSDK

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
examples/: CMakeLists.txt  analyze_image.cpp
src/: CMakeLists.txt  beamprofile_c.cpp  beamprofile_impl.cpp
src/include/beamprofile/: beamprofile.h  beamprofile.hpp
tests/: CMakeLists.txt  baseline_calculator.py  beamprofile_test.cpp
